<resources>
    <string name="app_name" translatable="false">Key Driver</string>

    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="issues_url">https://gitlab.com/kunzisoft/android-hardware-key-driver/-/issues</string>
    <string name="contribution">Contribution</string>
    <string name="contribute">Contribute</string>
    <string name="keepro_url" translatable="false">https://play.google.com/store/apps/details?id=com.kunzisoft.keepass.pro</string>
    <string name="about_description">Driver application for hardware keys, SoloKey and YubiKey.</string>
    <string name="html_about_licence">Key Driver © %1$d Kunzisoft is &lt;strong&gt;open source&lt;/strong&gt; and &lt;strong&gt;without advertising&lt;/strong&gt;. \nIt is provided as is, under &lt;strong&gt;GPLv3&lt;/strong&gt; license, without any warranty.</string>
    <string name="html_about_privacy">&lt;strong&gt;No user data is retrieved&lt;/strong&gt;, this application does not connect to any server, works only locally and fully respects the privacy of users.</string>
    <string name="html_about_contribution">In order to &lt;strong&gt;keep our freedom&lt;/strong&gt;, &lt;strong&gt;fix bugs&lt;/strong&gt;, &lt;strong&gt;add features&lt;/strong&gt; and &lt;strong&gt;to be always active&lt;/strong&gt;, we count on your &lt;strong&gt;contribution&lt;/strong&gt;.</string>
    <string name="html_text_dev_feature">This feature is &lt;strong&gt;under development&lt;/strong&gt; and requires your &lt;strong&gt;contribution&lt;/strong&gt; to be available soon.</string>
    <string name="html_text_dev_feature_contibute">By &lt;strong&gt;contributing&lt;/strong&gt;,</string>
    <string name="html_text_dev_feature_encourage">you are encouraging developers to create &lt;strong&gt;new features&lt;/strong&gt; and to &lt;strong&gt;fix bugs&lt;/strong&gt; according to your remarks.</string>

    <string name="set_recovery_key">Set the recovery key.</string>
    <string name="attach_yubikey">Plug in the YubiKey.</string>
    <string name="attach_or_swipe_yubikey">Plug in or put the YubiKey on the NFC reader.</string>
    <string name="swipe_yubikey">Put the Yubikey on the NFC reader.</string>
    <string name="virtual_challenge_fetch">Resolving challenge virtually.</string>
    <string name="virtual_key_generate">The virtual key is being generated.</string>
    <string name="no_supported_connection_method">Your device supports neither USB host mode nor NFC. YubiKeys can not be used.</string>
    <string name="press_button">Press the button on your YubiKey.</string>
    <string name="authenticate_biometrics">Identify yourself</string>
    <string name="authenticate_biometrics_cancel">Cancel</string>
    <string name="error_unplug_yubikey">An error has occurred. Unplug your YubiKey.</string>
    <string name="error_yubikey_slowly">An error has occurred. Keep the Yubikey on the NFC receiver longer.</string>
    <string name="error_yubikey_configure">An error has occurred. Make sure your key is properly configured.</string>
    <string name="error_authenticate_biometrics">Unable to verify user using biometrics.</string>
    <string name="error_store_virtual_challenge">Unable to store virtual challenge response due to: %s.</string>
    <string name="error_init_virtual_challenge_key">Unable to initialize virtual challenge storage encryption key.</string>
    <string name="error_clear_virtual_challenge_key">Unable to clear virtual challenge storage encryption key.</string>
    <string name="invalid_challenge">An invalid challenge was passed. Contact the support of the app you are trying to use with.</string>
    <string name="usb_permission_denied">USB permission denied. Unplug your YubiKey.</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="success_unplug_nfc_key">Response generated!\n\nRemove the key from the NFC reader and press OK to return to the app requiring the challenge.</string>

    <string name="hardware_key">Hardware Key</string>
    <string name="solokey_pref" translatable="false">solokey_pref</string>
    <string name="solokey">SoloKey</string>
    <string name="yubikey_pref" translatable="false">yubikey_pref</string>
    <string name="yubikey">YubiKey</string>
    <string name="general">General</string>
    <string name="default_slot_pref" translatable="false">default_slot_pref</string>
    <string name="default_slot">Default slot</string>
    <string name="default_slot_description">First default slot selected during a challenge-response</string>
    <string name="slot_1">Slot 1</string>
    <string name="slot_2">Slot 2</string>
    <string name="slot_virtual_response">Virtual</string>
    <string name="virtualization">Virtualization</string>
    <string name="virtual_key_pref" translatable="false">virtual_key_pref</string>
    <string name="virtual_key">Use as virtual hardware key</string>
    <string name="recovery_key_pref" translatable="false">recovery_key_pref</string>
    <string name="recovery_key">Recovery Key</string>
    <string name="recovery_key_description">Recovery key to generate a proper virtual challenge-response</string>
    <string name="challenge_virtualization">Challenge</string>
    <string name="virtual_challenge_pref" translatable="false">virtual_challenge_pref</string>
    <string name="virtual_challenge">Remember challenge responses</string>
    <string name="virtual_challenge_description">Save response of each challenge so the hardware key is only needed once</string>
    <string name="virtual_challenge_description_fail_sdk_version_23">Not available: Requires Android 6.0 or higher</string>
    <string name="virtual_challenge_description_fail_no_biometrics">Not available: No biometric authentication method</string>
    <string name="clear_virtual_challenges_pref" translatable="false">clear_virtual_challenges_pref</string>
    <string name="clear_virtual_challenges">Delete saved responses</string>
    <string name="clear_virtual_challenges_description">Delete all saved responses and recreate storage encryption key</string>
    <string name="in_development">(In development)</string>

    <string name="default_feedback_pref" translatable="false">default_feedback_pref</string>
    <string name="default_feedback">Default feedback</string>
    <string name="default_feedback_summary">Let the system choose to emit a sound or a vibration</string>
    <bool name="default_feedback_default" translatable="false">true</bool>
    <string name="sound_pref" translatable="false">sound_pref</string>
    <string name="sound">Sound</string>
    <string name="sound_summary">Emit a sound when the hardware key is correctly read</string>
    <bool name="sound_default" translatable="false">true</bool>
    <string name="vibration_pref" translatable="false">vibration_pref</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_summary">Perform a vibration when the hardware key is correctly read</string>
    <bool name="vibration_default" translatable="false">true</bool>
</resources>