<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        android:id="@+id/baseLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context="com.kunzisoft.hardware.key.FIDOHMACActivity">

    <TextView
            android:id="@+id/info"
            android:layout_width="363dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="48dp"
            android:padding="24dp"
            android:minHeight="96dp"
            android:text="@string/attach_yubikey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/yubikeyImage"
            android:textSize="16sp"
            android:textStyle="bold" app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:id="@+id/yubikeyImage"
            android:layout_width="412dp"
            android:layout_height="209dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hardware_key"
            android:src="@drawable/img_yubikey"
            app:layout_constraintTop_toBottomOf="@+id/pinEntryGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:tint="#3161FF" android:tintMode="multiply"
            app:layout_constraintHorizontal_bias="0.0"/>

    <com.google.android.material.chip.ChipGroup
            android:id="@+id/pinEntryGroup"
            android:layout_width="209dp"
            android:layout_height="57dp"
            android:layout_marginBottom="524dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pinEntry"
                android:importantForAutofill="no"
                android:singleLine="true" android:hint="@string/pin_hint"/>
        <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/waiting"
                android:layout_width="126dp"
                android:layout_margin="48dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_marginBottom="92dp"/>
    </com.google.android.material.chip.ChipGroup>

    <ImageView
            android:id="@+id/failure"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_error_outline_24"
            app:layout_constraintBottom_toBottomOf="@+id/pinEntryGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            app:tint="?attr/colorAccent"
            tools:ignore="ContentDescription" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="132dp"/>
    <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:drawableEnd="@drawable/ic_error_outline_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/pinEntryGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="56dp"/>
    <TextView
            android:text=""
            android:layout_width="391dp"
            android:layout_height="29dp" android:id="@+id/rpIdView"
            android:layout_marginEnd="9dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="9dp"
            app:layout_constraintTop_toBottomOf="@+id/info"/>


</androidx.constraintlayout.widget.ConstraintLayout>